--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,10 +9,29 @@ body {
 }
 
 .start_contents {
-    margin-top: 30px;
+    margin: 50px 30px 0px 30px;
 }
 
 input[type="text"] {
+    padding: 6px 6px;
+    border: 1px solid $inputGray;
+    border-radius: 5px;
+}
+
+
+input[type="password"] {
+    padding: 6px 6px;
+    border: 1px solid $inputGray;
+    border-radius: 5px;
+}
+
+input[type="email"] {
+    padding: 6px 6px;
+    border: 1px solid $inputGray;
+    border-radius: 5px;
+}
+
+input[type="select"] {
     padding: 6px 6px;
     border: 1px solid $inputGray;
     border-radius: 5px;
@@ -25,4 +44,58 @@ button {
     font-weight: bold;
     border: 1px solid $Back2;
     border-radius: 3px;
+}
+
+.inputSelect, .inputDate {
+    font-family:"Helvetica Neue", Helvetica, sans-serif; 
+	display: inline-block;
+	font-size: $xx-small;
+	line-height: 20px;
+	width: 170px;
+    height: 28px;
+    padding-left: 5px;
+	box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	border: 1px solid $BorderGray;
+	border-radius: 5px;
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	background-color: #fff;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E');
+	background-repeat: no-repeat, repeat;
+	background-position: right .3em top 50%, 0 0;
+	background-size: .65em auto, 100%;
+}
+
+.inputSelect::-ms-expand, .inputDate::-ms-expand {
+	display: none;
+}
+
+.inputSelect:hover, .inputDate:hover {
+	border-color: $BorderGray;
+}
+
+input:focus, .inputSelect:focus, .inputDate:focus {
+	border-color: none;
+	box-shadow: 0 0 1px 3px $BackSkyBlue;
+	box-shadow: 0 0 0 3px $BackSkyBlue;
+	color: #222; 
+	outline: none;
+}
+
+*[dir="rtl"] .inputSelect, :root:lang(ar) .inputSelect, :root:lang(iw) .inputSelect {
+	background-position: left .7em top 50%, 0 0;
+	padding: .6em .8em .5em 1.4em;
+}
+
+.inputSelect:disabled, .inputSelect[aria-disabled=true], .inputDate:disabled, .inputDate[aria-disabled=true] {
+	color: $fontGray;
+	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+	  linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+}
+
+.inputSelect:disabled:hover, .inputSelect[aria-disabled=true], .inputDate:disabled:hover, .inputDate[aria-disabled=true] {
+	border-color: $BorderGray;
 }
