--- a/src/styles/barcode.scss
+++ b/src/styles/barcode.scss
@@ -1,23 +1,29 @@
 @import './valiables.scss';
 
 #barcode {
-    width: 100%;
+    width: 90%;
     text-align: center;
-    * {
-        margin: 0 auto;
-    }
+    margin: 0 auto;
+    margin-top: 70px;
     #scanner-container {
         width: 90%;
-        height: 400px;
-        background-color: aqua;
-        .drawingBuffer {
-            width: 100px;
-            height: 100px;
+        height: 350px;
+        margin: 0 auto;
+        border: 1px solid $BorderGray;
+        * {
+            width: 100%;
+            height: 350px;
         }
     }
     #container {
         width: 90%;
-        height: 400px;
+        height: 350px;
+        margin: 0 auto;
         border: 1px solid $BorderGray;
+    }
+    button {
+        width: 90%;
+        height: 34px;
+        margin: 20px auto;
     }
 }
