--- a/src/styles/top_bar.scss
+++ b/src/styles/top_bar.scss
@@ -65,6 +65,13 @@
     position: absolute;
     top: 0;
     right: 0;
+    .create {
+        position: absolute;
+        top: 0;
+        p {
+            margin: 0;
+        }
+    }
 }
 
 .null {
