--- a/src/styles/valiables.scss
+++ b/src/styles/valiables.scss
@@ -69,3 +69,29 @@ $xx-large : 1.15em;
         opacity: 1;
     }
 }
+
+//fadein bottom
+@-webkit-keyframes fade-in-right {
+    0% {
+      -webkit-transform: translateX(-50px);
+              transform: translateX(-50px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+}
+@keyframes fade-in-right {
+    0% {
+      -webkit-transform: translateX(-50px);
+              transform: translateX(-50px);
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: translateX(0);
+              transform: translateX(0);
+      opacity: 1;
+    }
+}
