210902 user chat (chat list, chat) css 적용

--- a/src/styles/barcode.scss
+++ b/src/styles/barcode.scss
@@ -5,6 +5,8 @@
     text-align: center;
     margin: 0 auto;
     margin-top: 70px;
+    animation: fadein 2s;
+    -webkit-animation: fadein 2s;
     #scanner-container {
         width: 90%;
         height: 350px;
