210903 user chat scroll css 적용

--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -25,6 +25,8 @@
         -webkit-animation: fadein 2s;
         width: 90%;
         margin: 0px 0px 0px 20px;
+        padding: 0 0 100px 0;
+        overflow: auto;
         #you, #me {
             float: left;
             width: 70%;
