210903 admin (home, create, search, update) css 적용

--- a/src/styles/top_bar.scss
+++ b/src/styles/top_bar.scss
@@ -55,6 +55,14 @@
     position: absolute;
     top: 0;
     left: 0;
+    .cancel {
+        position: absolute;
+        top: 0;
+        left: 7px;
+        p {
+            margin: 0;
+        }
+    }
 }
 
 .right {
