210903 service-worker 디버깅

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -18,12 +18,12 @@
         }
         #search_button {
             width: 27px;
-            top: 97px;
+            top: 117px !important;
             right: 40px;
             margin: 0 auto;
             position: absolute;
             float: right;
-            color: $Back2
+            color: $Back2;
         }
     }
 
