--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -104,6 +104,7 @@
             border-radius: 10px;
             .resultItemsTable {
                 padding-bottom: 10px;
+                margin: 0 auto;
                 margin-bottom: 10px;
                 border-bottom: 1px solid $BorderGray;
                 img {
