--- a/src/styles/top_bar.scss
+++ b/src/styles/top_bar.scss
@@ -1,88 +1,88 @@
-@import './valiables.scss';
+@import "./valiables.scss";
 
 .topBar {
-    z-index: 1;
-    width:100%;
-    height: auto;
-    top: 0;
-    position: fixed;
-    color: #ffffff;
-    background: linear-gradient(180deg, $Back2, $Back1);
-    margin: 0 auto;
-    text-align: center;
-    line-height: 40px;
+  z-index: 1;
+  width: 100%;
+  height: auto;
+  top: 0;
+  position: fixed;
+  color: #ffffff;
+  background: linear-gradient(180deg, $Back2, $Back1);
+  margin: 0 auto;
+  text-align: center;
+  line-height: 40px;
 }
 
 #small {
-    width: 100%;
-    .center{
-        width: 130px;
-        height: 40px;
-        text-align: center;
-        margin: 0 auto;
-        display: inline-block !important;
-        font-size: large;
-        .title {
-            margin: 0 auto;
-        }
+  width: 100%;
+  .center {
+    width: 130px;
+    height: 40px;
+    text-align: center;
+    margin: 0 auto;
+    display: inline-block !important;
+    font-size: large;
+    .title {
+      margin: 0 auto;
     }
+  }
 }
 
 #big {
-    width: 100%;
-    height: auto;
-    .center {
-        width: 110px;
-        height: 60px;
-        font-size: $x-large;
-        font-weight: bold;
-        text-align: center;
-        margin: 0;
-        display: inline-block !important;
-        .data {
-            font-size: small;
-            font-weight: normal;
-            line-height: normal;
-        }
+  width: 100%;
+  height: auto;
+  .center {
+    width: 110px;
+    height: 60px;
+    font-size: $x-large;
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
+    display: inline-block !important;
+    .data {
+      font-size: small;
+      font-weight: normal;
+      line-height: normal;
     }
+  }
 }
 
 .left {
-    width: 40px;
-    height: 40px;
-    margin: 0 auto;
-    color: #ffffff;
+  width: 40px;
+  height: 40px;
+  margin: 0 auto;
+  color: #ffffff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  .cancel {
     position: absolute;
     top: 0;
-    left: 0;
-    .cancel {
-        position: absolute;
-        top: 0;
-        left: 7px;
-        p {
-            margin: 0;
-        }
+    left: 7px;
+    p {
+      margin: 0;
     }
+  }
 }
 
 .right {
-    width: 40px;
-    height: 40px;
-    margin: 0 auto;
-    color: #ffffff;
+  width: 40px;
+  height: 40px;
+  margin: 0 auto;
+  color: #ffffff;
+  position: absolute;
+  top: 0;
+  right: 0;
+  .create {
     position: absolute;
     top: 0;
-    right: 0;
-    .create {
-        position: absolute;
-        top: 0;
-        p {
-            margin: 0;
-        }
+    p {
+      margin: 0;
     }
+  }
 }
 
 .null {
-    width: 40px !important;
-    height: 40px !important;
+  width: 40px !important;
+  height: 40px !important;
 }
