--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,9 +1,12 @@
 @import "./valiables.scss";
-@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
+
+* {
+  font-family: Pretendard;
+}
 
 body {
   margin: 0;
-  font-family: "Pretendard Variable";
 }
 
 .contents {
@@ -14,52 +17,37 @@ body {
   margin: 50px 30px 0px 30px;
 }
 
-input[type="text"] {
+input,
+textarea {
+  box-shadow: $BorderGray 0px 0px 3px;
   padding: 6px 6px;
-  border: 1px solid $inputGray;
   border-radius: 5px;
-}
-
-input[type="password"] {
-  padding: 6px 6px;
-  border: 1px solid $inputGray;
-  border-radius: 5px;
-}
-
-input[type="email"] {
-  padding: 6px 6px;
-  border: 1px solid $inputGray;
-  border-radius: 5px;
-}
-
-input[type="select"] {
-  padding: 6px 6px;
-  border: 1px solid $inputGray;
-  border-radius: 5px;
+  border: none;
+  margin: 5px auto;
 }
 
 button {
-  padding: 5px 10px;
-  background-color: $Back1;
+  padding: 10px;
+  font-size: medium;
+  background-color: $v2Back2;
   color: $white;
-  font-weight: bold;
-  border: 1px solid $Back2;
+  border: none;
   border-radius: 3px;
 }
 
 .input_select,
 .input_date {
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
   display: inline-block;
   font-size: $xx-small;
   line-height: 20px;
   width: 170px;
   height: 28px;
   padding-left: 5px;
+  box-shadow: $BorderGray 0px 0px 3px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  border: 1px solid $BorderGray;
+  border: none;
   border-radius: 5px;
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -85,8 +73,8 @@ input:focus,
 .input_select:focus,
 .input_date:focus {
   border-color: none;
-  box-shadow: 0 0 1px 3px $BackSkyBlue;
-  box-shadow: 0 0 0 3px $BackSkyBlue;
+  box-shadow: 0 0 1px 3px $v2Back1;
+  box-shadow: 0 0 0 3px $v2Back1;
   color: #222;
   outline: none;
 }
