--- a/client/src/styles/barcode.scss
+++ b/client/src/styles/barcode.scss
@@ -4,7 +4,7 @@
   width: 90%;
   text-align: center;
   margin: 0 auto;
-  margin-top: 70px;
+  margin-top: 80px;
   animation: fadein 2s;
   -webkit-animation: fadein 2s;
   #scanner_container {
@@ -25,7 +25,7 @@
   }
   button {
     width: 90%;
-    height: 34px;
     margin: 20px auto;
+    padding: 10px 0;
   }
 }
