--- a/client/src/styles/menu.scss
+++ b/client/src/styles/menu.scss
@@ -5,7 +5,7 @@
   text-align: center;
   padding: 4px 0px 20px 0px;
   border-radius: 15px 15px 0 0;
-  background-color: $Back1;
+  background-color: $v2Back1;
   position: fixed;
   bottom: 0;
   z-index: 10;
