--- a/client/src/styles/top_bar.scss
+++ b/client/src/styles/top_bar.scss
@@ -7,17 +7,18 @@
   top: 0;
   position: fixed;
   color: #ffffff;
-  background: linear-gradient(180deg, $Back2, $Back1);
+  background: $v2Back2;
   margin: 0 auto;
   text-align: center;
-  line-height: 40px;
+  line-height: 50px;
+  border-radius: 0 0 30px 30px;
 }
 
 #small {
   width: 100%;
   .center {
     width: 130px;
-    height: 40px;
+    height: 50px;
     text-align: center;
     margin: 0 auto;
     display: inline-block !important;
@@ -48,8 +49,8 @@
 }
 
 .left {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   margin: 0 auto;
   color: #ffffff;
   position: absolute;
@@ -58,7 +59,7 @@
   .cancel {
     position: absolute;
     top: 0;
-    left: 7px;
+    left: 22.34px;
     p {
       margin: 0;
     }
@@ -66,8 +67,8 @@
 }
 
 .right {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   margin: 0 auto;
   color: #ffffff;
   position: absolute;
@@ -83,6 +84,6 @@
 }
 
 .null {
-  width: 40px !important;
-  height: 40px !important;
+  width: 50px !important;
+  height: 50px !important;
 }
